--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,10 @@
-/* Empty. Add your own CSS if you like */
+.loading {
+    background-color: transparent !important;
+}
+.backdrop {
+    background-color: rgba(0,0,0,0.2);
+}
+#bushopperLoading svg {
+    height: 80px;
+    width: 80px;
+}
