- Extract state transitions and animations so they are they own services - Introduce prototypes to provide cleaner, oo coding

--- a/www/templates/dash.html
+++ b/www/templates/dash.html
@@ -3,7 +3,7 @@
         <h1 class="title">Bus Hopper</h1>
         <button class="button icon ion-gear-a button-clear"></button>
     </div>
-    <ion-content class="padding has-header">
+    <ion-content has-bouncing="false" class="padding has-header">
         <div class="list">
             <div class="item item-input-inset">
                 <label class="item-input-wrapper">
