--- a/www/templates/result.html
+++ b/www/templates/result.html
@@ -5,6 +5,11 @@
         <button class="button icon ion-android-star-outline button-clear"></button>
     </div>
     <ion-content class="padding has-header">
-        <div class="button" nav-direction="back" ui-sref="selectbus">Select Bus</div>
+        <div class="button-bar">
+            <a nav-direction="back" ui-sref="selectbus" class="button icon ion-chevron-left button-clear"></a>
+            <a class="button icon ion-refresh button-clear"></a>
+            <a class="button icon ion-android-alarm-clock button-clear"></a>
+        </div>
+
     </ion-content>
 </ion-view>
