--- a/www/templates/result.html
+++ b/www/templates/result.html
@@ -1,9 +1,14 @@
 <ion-view>
-    <div class="bar bar-header bar-assertive">
+    <ion-header-bar class="bar bar-header bar-assertive">
         <button class="button icon ion-home button-clear" nav-direction="back" ui-sref="dash"></button>
         <h1 class="title">Stop {{stopTitle}} : {{routeTitle}}</h1>
-        <button class="button icon ion-android-star-outline button-clear"></button>
-    </div>
+        <button
+                class="button icon button-clear"
+                ng-class="{'ion-android-star' : isRouteSetFavorite, 'ion-android-star-outline' : !isRouteSetFavorite}"
+                ng-click="toggleFavoriteRouteSet()"
+                >
+        </button>
+    </ion-header-bar>
     <ion-content has-bouncing="false" class="padding has-header">
         <div class="button-bar">
             <a nav-direction="back" ui-sref="selectbus" class="button icon ion-chevron-left button-clear"></a>
