--- a/www/templates/selectbus.html
+++ b/www/templates/selectbus.html
@@ -1,9 +1,9 @@
 <ion-view>
-    <div class="bar bar-header bar-assertive">
+    <ion-header-bar class="bar bar-header bar-assertive">
         <button class="button icon ion-home button-clear" nav-direction="back" ui-sref="dash"></button>
         <h1 class="title">Stop {{stopTitle}}</h1>
         <button class="button icon ion-android-star-outline button-clear"></button>
-    </div>
+    </ion-header-bar>
     <ion-content has-bouncing="false" class="padding has-header">
         <div class="list card">
             <a class="item item-icon-left item-icon-right item-divider"
