--- a/www/templates/showTrips.html
+++ b/www/templates/showTrips.html
@@ -11,7 +11,7 @@
     </ion-header-bar>
     <ion-content has-bouncing="false" class="padding has-header">
         <div class="button-bar">
-            <a nav-direction="back" ui-sref="selectbus" class="button icon ion-chevron-left button-clear"></a>
+            <a nav-direction="back" ui-sref="selectRoutes" class="button icon ion-chevron-left button-clear"></a>
             <a class="button icon ion-refresh button-clear" ng-click="updateContent()"></a>
             <a class="button icon ion-android-alarm-clock button-clear"></a>
         </div>
