you can delete favorite/recent routes on dashboard

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,3 +8,9 @@
     height: 80px;
     width: 80px;
 }
+.item-content {
+    padding-right: 16px !important;
+}
+.route-panel-btn {
+    float: right;
+}
