change file encoding, and start how search suggestion should work

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -14,3 +14,8 @@
 .route-panel-btn {
     float: right;
 }
+.search-suggestions-panel {
+    position: absolute;
+    width: 100%;
+    z-index: 30;
+}
