--- a/www/templates/dash.html
+++ b/www/templates/dash.html
@@ -3,28 +3,19 @@
         <h1 class="title">Bus Hopper</h1>
         <button class="button icon ion-gear-a button-clear"></button>
     </ion-header-bar>
-    <!--<ion-header-bar class="bar-subheader item item-input-inset">-->
-        <!--<label class="item-input-wrapper">-->
-            <!--<i class="icon ion-ios-search placeholder-icon"></i>-->
-            <!--<input type="search" placeholder="Bus stop name/number">-->
-        <!--</label>-->
-        <!--<button class="button button-clear">-->
-            <!--Cancel-->
-        <!--</button>-->
-    <!--</ion-header-bar>-->
     <ion-content has-bouncing="false" class="padding has-header has-header">
         <div>
             <div class="item item-input-inset">
                 <label class="item-input-wrapper">
-                    <input type="text" placeholder="Bus stop name/number" ng-focus="data.showSearchSuggestions = true" ng-model="data.stopNum">
+                    <input type="text" placeholder="Bus stop name/number" ng-change="search.searchChange()" ng-model="search.stopNum">
                 </label>
-                <a class="button button-icon icon ion-ios-search" ng-click="updateStop()"></a>
-                <a class="button button-icon icon ion-android-close" ng-click="data.showSearchSuggestions = false"></a>
+                <a class="button button-icon icon ion-android-close" ng-click="search.refreshSearch()"></a>
             </div>
         </div>
 
-        <ul ng-show="data.showSearchSuggestions" class="list search-suggestions-panel">
-            <li ng-repeat="val in demoValues" class="item">{{val}}</li>
+        <ul ng-if="search.showSearchSuggestions" class="list search-suggestions-panel">
+            <li ng-repeat="val in allStops | filter: search.stopNum | limitTo:30" ng-click="search.searchStop()" class="item">{{val}}</li>
+            <li class="item item-divider"></li>
         </ul>
 
         <div class="row">
@@ -37,13 +28,11 @@
             <span>
                 Recent Routes
                 <button ng-if="recentRouteSets.length > 0" ng-click="options.showDeleteRecent = !options.showDeleteRecent" class="button button-assertive button-small route-panel-btn">Delete</button>
-                <button ng-if="recentRouteSets.length > 0" ng-click="options.showReorderRecent = !options.showReorderRecent" class="button button-small route-panel-btn" style="margin-right: 5px">Rearrange</button>
             </span>
         </div>
         <ion-list show-delete="options.showDeleteRecent" show-reorder="options.showReorderRecent">
             <ion-item ng-repeat="routeSet in recentRouteSets" class="item item-icon-left" ng-click="selectRouteSet(routeSet)">
                 <ion-delete-button ng-click="options.deleteRecentRoute(routeSet)" class="ion-android-cancel"></ion-delete-button>
-                <ion-reorder-button on-reorder="options.moveRecentRoute(routeSet, $fromIndex, $toIndex)" class="ion-navicon"></ion-reorder-button>
                 <i class="icon ion-android-bus"></i>
                 <span class="item-note" ng-if="!options.showReorderRecent && !options.showDeleteRecent">Stop</span>
                 <h2>{{routeSet.join(', ')}}</h2>
