fix ionic bug in 2.5
- for some reason, ionic has some issue with z-index that cannot easily be resolved with css for ion-item elements; this was resolved by hiding ion-items when search bar is focused

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -19,10 +19,13 @@
     width: 100%;
     z-index: 30;
 }
+.search-suggestions-panel li {
+    position: relative;
+    z-index: 30;
+}
 .search-suggestions-panel .item {
     background-color: #FBFBFB;
 }
-
 .search-suggestions-panel .item.item-divider {
     text-align: center;
     background-color: #eee;
