--- a/www/templates/dash.html
+++ b/www/templates/dash.html
@@ -7,17 +7,18 @@
         <div>
             <div class="item item-input-inset">
                 <label class="item-input-wrapper">
-                    <input type="text" placeholder="Bus stop name/number" ng-change="search.searchChange()" ng-model="search.stopNum">
+                    <input type="text" placeholder="Bus stop name/number" ng-focus="search.focusSearch=true" ng-blur="search.focusSearch=false" ng-change="search.searchChange()" ng-model="search.stopNum">
                 </label>
                 <a class="button button-icon icon ion-android-close" ng-click="search.refreshSearch()"></a>
             </div>
         </div>
 
         <ul ng-if="search.showSearchSuggestions" class="list search-suggestions-panel">
-            <li ng-repeat="val in allStops | filter: search.stopNum | limitTo:20" ng-click="search.searchStop(val)" class="item">{{val}}</li>
+            <li ng-repeat="val in allStops | filter: search.stopNum | limitTo:20" ng-click="search.searchStop(val)" class="item" style="z-index: 30">{{val}}</li>
             <li class="item item-divider"></li>
         </ul>
 
+        <div ng-show="!search.focusSearch">
         <div class="row">
             <div class="col"></div>
             <div class="col col-50"><button class="button button-full icon-left ion-android-compass button-assertive">Find Stops</button></div>
@@ -30,7 +31,7 @@
                 <button ng-if="recentRouteSets.length > 0" ng-click="options.showDeleteRecent = !options.showDeleteRecent" class="button button-assertive button-small route-panel-btn">Delete</button>
             </span>
         </div>
-        <ion-list show-delete="options.showDeleteRecent" show-reorder="options.showReorderRecent">
+        <ion-list show-delete="options.showDeleteRecent">
             <ion-item ng-repeat="routeSet in recentRouteSets" class="item item-icon-left" ng-click="selectRouteSet(routeSet)">
                 <ion-delete-button ng-click="options.deleteRecentRoute(routeSet)" class="ion-android-cancel"></ion-delete-button>
                 <i class="icon ion-android-bus"></i>
@@ -55,7 +56,7 @@
             <span>
                 Favorite Routes
                 <button ng-if="favoriteRouteSets.length > 0" ng-click="options.showDeleteFavorite = !options.showDeleteFavorite" class="button button-assertive button-small route-panel-btn">Delete</button>
-                <button ng-if="favoriteRouteSets.length > 0" ng-click="options.showReorderFavorite = !options.showReorderFavorite" class="button button-small route-panel-btn" style="margin-right: 5px">Rearrange</button>
+                <button ng-if="favoriteRouteSets.length > 0" ng-click="options.showReorderFavorite = !options.showReorderFavorite" class="button button-small route-panel-btn" style="margin-right: 5px">Reorder</button>
             </span>
         </div>
         <ion-list show-delete="options.showDeleteFavorite" show-reorder="options.showReorderFavorite">
@@ -79,5 +80,6 @@
         </ion-list>
 
         <br>
+        </div>
     </ion-content>
 </ion-view>
