fix search bar focus bug in 2.5
When the search bar goes out of focus, search data is still shown (which can look ugly). This has been removed

--- a/www/templates/dash.html
+++ b/www/templates/dash.html
@@ -7,7 +7,7 @@
         <div>
             <div class="item item-input-inset">
                 <label class="item-input-wrapper">
-                    <input type="text" placeholder="Bus stop name/number" ng-focus="search.focusSearch=true" ng-blur="search.focusSearch=false" ng-change="search.searchChange()" ng-model="search.stopNum">
+                    <input type="text" placeholder="Bus stop name/number" ng-focus="search.focusSearch=true" ng-change="search.searchChange()" ng-model="search.stopNum">
                 </label>
                 <a class="button button-icon icon ion-android-close" ng-click="search.refreshSearch()"></a>
             </div>
