--- a/www/templates/showTrips.html
+++ b/www/templates/showTrips.html
@@ -1,7 +1,7 @@
 <ion-view>
     <ion-header-bar class="bar bar-header bar-assertive">
         <button class="button icon ion-home button-clear" nav-direction="back" ui-sref="dash"></button>
-        <h1 class="title">Stop {{stopTitle}} : {{routeTitle}}</h1>
+        <h1 class="title">Stop {{stopTitle}}</h1>
         <button
                 class="button icon button-clear"
                 ng-class="{'ion-android-star' : isRouteSetFavorite, 'ion-android-star-outline' : !isRouteSetFavorite}"
@@ -11,9 +11,9 @@
     </ion-header-bar>
     <ion-content has-bouncing="false" class="padding has-header">
         <div class="button-bar">
-            <a nav-direction="back" ui-sref="selectRoutes" class="button icon ion-chevron-left button-clear"></a>
+            <a nav-direction="back" ui-sref="selectRoutes" class="button icon ion-android-map button-clear"></a>
             <a class="button icon ion-refresh button-clear" ng-click="updateContent()"></a>
-            <a class="button icon ion-android-alarm-clock button-clear"></a>
+            <a disabled class="button icon ion-android-alarm-clock button-clear"></a>
         </div>
         <div class="card">
             <a ng-repeat="trip in availableTrips"
